tests/activitygen/errors/passenger_disallowed/errors.activitygen
Error: No street that allows passenger vehicles found in this city.
Quitting (on error).
